10/16/17
 - using WORLDNAME defined in gsystem.h
 - using NOTAPPLICABLE defined in gvolume.h


10/9/17
 - passing the global map to GDetectorConstruction then to the local sensitive detectors
 - checking that we do not already have a GSensitiveDetector
 - better glog symbol and formatting
 - added threadLog option to select thread to listen to
 - registering SD dector to G4 SD Manager
 - picking the digitization from the global map
 - passing options to initGemcG4RunManager to use threadLog


10/6/17
 - removing sensitive map from GDetectorConstruction constructSD: this is thread local, let us not modify global pointer
 - added method getSensitiveVolumes() to retrieve the the sensitive names and their paths from gsetup, so the plugins can be loaded
 - gDigiLocal needs not be shared_ptr
 - changed log sign with ⌘, it looks cooler
 - added geant4 version
 - added utility function to load plugins
 - added LOG and ERR symbols

10/5/17
 - beamOn() is now part of grun, which also have a gDynamic map and will take care of plugin initialization for each run
 - GDynamic does not need to be a shared_ptr
 - added event action
 - both interactive and batch mode use GRuns:: processEvents() to activate beamOn()
 - using map of gDynamic pointers
 - using flowMessage properly in GSensitive constructor
 - ConstructSD is thread local so using G4cerr
 - setting GEventAction in userAction

9/20/17
 - GDetectorConstruction inherits from gFlowMessage
 - GSensitiveDetector inherits from gFlowMessage
 - GActionInitialization inherits from gFlowMessage
 - marking flowMessage as const, making flowCounter mutable

9/19/17
 - added gFlowMessage class to log gemc flow
 - moved detector construction to main
 - moved digitization to main
 - implementing some code conventions:

   - "global" in variable names corresponds to variables shared among threads.
   - "tlocal" in variable names corresponds to variables locals in threads.

7/17/17
 - moved gtouchable out of gemc

7/12/17