@@ -29,7 +29,7 @@ int loadQResource(char* argv[], string resourceName)
 	QFileInfo qrcFileInfoExecutable(argv[0]);
 	QString rccPath = qrcFileInfoExecutable.absolutePath() + "/" + QString(resourceName.c_str());
 	QResource::registerResource(rccPath);
-
+	
 	return 1;
 }
 
@@ -40,8 +40,8 @@ int loadQResource(char* argv[], string resourceName)
 vector<string> batchCommands(GOptions* gopt)
 {
 	vector<string> commands;
-
-
+	
+	
 	return commands;
 }
 
@@ -49,16 +49,16 @@ vector<string> batchCommands(GOptions* gopt)
 vector<string> startingCommands(GOptions* gopt)
 {
 	vector<string> commands = batchCommands(gopt);
-
-
+	
+	
 	commands.push_back("/vis/scene/add/trajectories rich smooth");
-
-
+	
+	
 	// not in gui mode, return natch only
 	if( gopt->getBool("gui") == false) return commands;
-
-
-
+	
+	
+	
 	return commands;
 }
 
@@ -69,17 +69,17 @@ vector<string> startingCommands(GOptions* gopt)
 void applyInitialUIManagerCommands(GOptions* gopt)
 {
 	G4UImanager *g4uim = G4UImanager::GetUIpointer();
-
+	
 	int verbosity = gopt->getInt("gemcv");
 	vector<string> commands = startingCommands(gopt);
-
+	
 	vector<string> optionCommands = gopt->getStrings("g4command");
 	if(optionCommands[0] != "no") {
 		for(auto &c: optionCommands) {
 			commands.push_back(c);
 		}
 	}
-
+	
 	for(auto &c : commands) {
 		if(verbosity > GVERBOSITY_SUMMARY) {
 			cout << GEMCLOGMSGITEM << " Executing UIManager command \"" << c << "\"" << endl;
@@ -99,7 +99,7 @@ int getNumberOfThreads(GOptions* gopt)
 	
 	// global log screen
 	cout << GEMCLOGMSGITEM << " G4MTRunManager: using " << useThreads << " threads out of "  << allThreads << " available."  << endl;
-
+	
 	return useThreads;
 }
 
@@ -107,11 +107,11 @@ int getNumberOfThreads(GOptions* gopt)
 void initGemcG4RunManager(G4MTRunManager *grm, GOptions* gopt)
 {
 	int threadLog = gopt->getOption("threadLog").getIntValue();
-
+	
 	G4UImanager *g4uim   = G4UImanager::GetUIpointer();
 	g4uim->ApplyCommand("/control/cout/setCoutFile gthread.log");
 	g4uim->ApplyCommand("/control/cout/ignoreThreadsExcept " + to_string(threadLog));
-
+	
 	grm->Initialize();
 }
 
@@ -130,14 +130,18 @@ int loadGPlugins(GOptions* gopt, map<string, string> sensD, map<string, GDynamic
 		string pluginName = pluginPath + "/" + p.first;
 		
 		manager.registerDL(pluginName);
-
+		
 		(*gDigiGlobal)[p.first] = manager.LoadObjectFromLibrary<GDynamic>(pluginName);
 		
 		// checkPlugin shoud return true
-		if((*gDigiGlobal)[p.first]->checkPlugin() == false) {
-			cout <<  GWARNING  << " Plugin " << pluginName << " checkPlugin() returned false. Load failure, or did you forget to implement it?" << endl;
+		if((*gDigiGlobal)[p.first]) {
+			if((*gDigiGlobal)[p.first]->checkPlugin() == false) {
+				cout <<  GWARNING  << " Warning: Plugin " << pluginName << " checkPlugin() returned false. Load failure, or did you forget to implement it?" << endl;
+			} else {
+				goodPlugins++;
+			}
 		} else {
-			goodPlugins++;
+			cout <<  GWARNING  << " Warning: Plugin " << pluginName << " could not be loaded." << endl;
 		}
 	}
 	
